--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -22,6 +22,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%
 }
 
 .select-button{
@@ -30,6 +31,7 @@
   width: 300px;
   font-size: 30px;
   background-color: #839e91;
+  border-radius: 10px;
 }
 
 .card-outline{
