--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -30,6 +30,7 @@
   height: 100px;
   width: 300px;
   font-size: 30px;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   background-color: #839e91;
   border-radius: 10px;
 }
@@ -130,4 +131,11 @@
   border-top: 0 solid #dbdbdb;
   border-bottom: 0 solid #dbdbdb;
   text-align: center;
+}
+
+.game-over-text {
+  font-size:50px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  color: white;
 }
